--- a/donate.css
+++ b/donate.css
@@ -1,7 +1,7 @@
 .see-form{
     font-size: 20px;
     font-weight: 700;
-    color: wheat;
+
     text-align: center;
     justify-content: center;
     background-image: url(./images/donation1.jpg);
@@ -20,6 +20,20 @@
     background-color: rgb(239, 18, 18);
     margin-bottom: 10px;
 }
+.low{
+    margin-top: 10px;
+
+}
+.btn2{
+    text-decoration: none;
+    color:wheat;
+    padding: 10px;
+    border-radius: 2px;
+    background-color: rgb(239, 18, 18);
+    margin-top: 10px;
+}
+
+
 .about{
     text-align: center;
     justify-content: center;
@@ -39,7 +53,7 @@
 .red{
     padding: 50px;
     color: rgb(198, 31, 31);
-    box-shadow: 10px 0px 14px gray;
+    box-shadow: 10px 0px 14px rgb(22, 21, 21);
 }
 .other{
     margin-bottom: 10px;
@@ -48,7 +62,93 @@
 .plan{
     margin-top: 50px;
 }
-.item{
+.item2{
     display: flex;
-    width: 30%;
+    margin-left: 20;
+    margin-right: 20px;
+    margin-bottom: 20px;
 }
+.item2:hover{
+    box-shadow: 3opx 24px 25px gray;
+    background-color: rgb(236, 23, 23);
+    color: rgb(18, 17, 17);
+}
+.item3{
+    box-shadow: 10px 10px 16px gray;
+    margin-left: 25px;
+    margin-right: 25px;
+    background-color: #FFF0F5;
+}
+   .item4{
+
+    box-shadow: 10px 10px 16px gray;
+    margin-left: 25px;
+    margin-right: 25px;
+    background-color:#FFE4B5 ;
+}
+.item5{
+
+    box-shadow: 10px 10px 16px gray;
+    margin-left: 25px;
+    margin-right: 25px;
+    background-color:#E0FFFF;
+}
+.m{
+    display: flex;
+}
+.item8 img{
+    height: 300px;
+    width: 400px;
+    margin-top: 100px;
+    margin-bottom: 30px;
+    margin-left: 100px;
+}
+.item7{
+   font-family :-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding: 0px;
+    margin-top: 40px;
+    margin-bottom: 30px; 
+    font-size: 15px;
+    margin-left: 5px;
+    box-shadow: 10px 10px 16px gray;
+
+    
+}
+.item9{
+    display: flex;
+}
+.item10 img{
+
+    height: 300px;
+    width: 400px;
+    margin-top: 100px;
+    margin-bottom: 30px;
+    margin-left
+}
+.item11{
+    font-family :-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding: 0px;
+    margin-top: 40px;
+    margin-bottom: 30px; 
+    font-size: 15px;
+    margin-left: 50px;
+    box-shadow: 10px 10px 16px gray;
+
+}
+.top:hover{
+    box-shadow: 30px 25px 25px rgb(220, 8, 8);
+    background-color: rgb(21, 20, 20);
+
+}
+.item11:hover{
+    background-color: rgb(15, 15, 15);
+    color: red;
+}
+.item7:hover{
+    background-color: rgb(22, 21, 21);
+    color: rgb(14, 181, 86);
+}
+.gren:hover{
+    box-shadow: 30px 25px 25px pink;
+}
+    
