--- a/donate.css
+++ b/donate.css
@@ -9,7 +9,7 @@
     background-size: cover;
     background-position: center;
     height: 80vh;
-    background: linear-gradient(rgb(217, 23, 23) rgb(194, 191, 191) gray);
+    color: rgb(215, 204, 202);
 
     
 }
@@ -43,16 +43,20 @@
 .tk{
     text-align: center;
     justify-content: center;
-    padding: 80px;
+    padding: 50-px;
     
     
 }
+.tk :hover{
+
+
+}
 .much{
-    padding: 50px;
+    padding: 21px;
     margin-bottom: 50px;
 }
 .red{
-    padding: 50px;
+    padding: 21px;
     color: rgb(198, 31, 31);
     box-shadow: 10px 0px 14px rgb(22, 21, 21);
     border-radius: 2px;
@@ -112,11 +116,11 @@
 .item7{
    font-family :-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     padding: 0px;
-    margin-top: 40px;
+    margin-top: 103px;
     margin-bottom: 30px; 
     font-size: 15px;
     margin-left: 5px;
-    box-shadow: 10px 10px 16px gray;
+   
     border-radius: 5px;
 
     
@@ -128,41 +132,26 @@
 
     height: 300px;
     width: 400px;
-    margin-top: 100px;
+    margin-top: 192px;
     margin-bottom: 30px;
     margin-left
 }
 .item11{
     font-family :-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     padding: 0px;
-    margin-top: 40px;
+    margin-top: 153px;
     margin-bottom: 30px; 
-    font-size: 15px;
-    margin-left: 50px;
-    box-shadow: 10px 10px 16px gray;
+    font-size: 19px;
+    margin-left: 112px;
+    
     border-radius: 5px;
 
-}
-.top:hover{
-    box-shadow: 30px 25px 25px rgb(220, 8, 8);
-    background-color: rgb(21, 20, 20);
-    border-radius: 5px;
+;
 
 }
-.item11:hover{
-    background-color: rgb(15, 15, 15);
-    color: red;
-}
-.item7:hover{
-    background-color: rgb(22, 21, 21);
-    color: rgb(14, 181, 86);
-}
-.gren:hover{
-    box-shadow: 30px 25px 25px pink;
-    border-radius: 5px;
-}
+
 .part1{
-color: chartreuse;
+color: rgb(60, 61, 59);
   font-family: cursive;
     font-size: 26px;
     font-weight: 700;
@@ -178,4 +167,5 @@ color: chartreuse;
 footer h1{
     color: tomato;
     background-color: black;
+    margin-bottom: -68px;
 }
